--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,20 @@
-build:
-  stage: build
+# build:
+#   stage: build
 
-  image: trion/ng-cli
+#   image: trion/ng-cli
 
-  before_script:
-    - npm ci
+#   before_script:
+#     - npm i
 
-  script:
-    - ng build
+#   script:
+#     - ng build
 
-  artifacts:
-    expire_in: 1 day
+#   artifacts:
+#     expire_in: 1 day
 
-    paths:
-      - dist/
+#     paths:
+#       - dist/
 
-  tags:
-    - dind
 # test:karma:
 #   stage: test
 #   image: trion/ng-cli-karma
@@ -24,5 +22,3 @@ build:
 #   script:
 #     - npm i
 #     - ng test --progress false --watch false
-#   tags:
-#     - dind
